Fix space too big on header

--- a/source/assets/stylesheets/base/_variables.scss
+++ b/source/assets/stylesheets/base/_variables.scss
@@ -1,3 +1,6 @@
+// Measurments
+$max-page-width: 1280px;
+
 // Typography
 $base-font-family: $helvetica;
 $heading-font-family: $base-font-family;
